# weather_app

./: pyproject.toml  readme.md
weather/: cron.py  dependencies.py  j2_filters.py  main.py  models.py
weather/api/: healthcheck.py  measurements.py
weather/models/: ProblemDetails.py  measurement.py  settings.py
weather/templates/: current.weather.html  hello.html
weather/views/: homepage.py
