[tool.poetry]
name = "weather"
version = "0.1.0"
description = "Weather micro service"
authors = ["Patrik Albert <patrik.albert5@gmail.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
httpx = "^0.26.0"
fastapi-restful = "^0.5.0"
typing-inspect = "^0.9.0"
loguru = "^0.7.2"
sqlmodel = "^0.0.14"
pendulum = "^3.0.0"
sqladmin = "^0.16.0"
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.20.0"
httpie = "^3.2.2"
litecli = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
